<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".NewsDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/black_shade_1"
        app:titleTextColor="@color/yellow"
        app:title="News App"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/BtnReading"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:id="@+id/IVNews"
                android:layout_margin="3dp"
                android:padding="3dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TVTitle"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:layout_margin="4dp"
                android:layout_below="@+id/IVNews"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_description"
                android:textColor="@color/white"
                android:padding="4dp"
                android:textSize="18sp"
                android:layout_margin="4dp"
                android:layout_below="@+id/TVTitle"
                android:id="@+id/TVSubDesc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TVContent"
                android:text="@string/content"
                android:textColor="@color/white"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:layout_below="@+id/TVSubDesc"/>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_full_news"
        android:id="@+id/BtnReading"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/yellow"
        android:textAllCaps="true"/>

</RelativeLayout>